
= Changelog
:toc: preamble
:project-url: https://github.com/sorairolake/qrtool
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/v0.11.1\...v0.11.2[0.11.2] - 2024-07-12

=== Fixed

* Fix CHANGELOG ({pull-request-url}/556[#556])

== {compare-url}/v0.11.0\...v0.11.1[0.11.1] - 2024-07-12 [YANKED]

=== Added

* Add support for PIC output format ({pull-request-url}/543[#543])
* Add ASCII string and ANSI escape sequences to the output format
  ({pull-request-url}/553[#553])
* Add values ​​for inverting foreground and background colors when the output format is a string ({pull-request-url}/553[#553])

=== Changed

* Rename `terminal` to `unicode`, and making `terminal` an alias for `unicode`
  ({pull-request-url}/553[#553])

== {compare-url}/v0.10.13\...v0.11.0[0.11.0] - 2024-07-03

=== Changed

* Change `--zopfli` to allow it to take a value. If the value is not specified,
  it is assumed that 15 is specified. This is the same as before the change
  ({pull-request-url}/534[#534])

== {compare-url}/v0.10.12\...v0.10.13[0.10.13] - 2024-06-29

=== Fixed

* Wrap long lines

== {compare-url}/v0.10.11\...v0.10.12[0.10.12] - 2024-06-29 [YANKED]

=== Added

* Add options to optimize output PNG image ({pull-request-url}/531[#531])

=== Changed

* Change the `encode` command to return an error if `--type` is `terminal` and
  the `--foreground` and/or `--background` options specify values ​​other than
  the default ({pull-request-url}/531[#531])

== {compare-url}/v0.10.10\...v0.10.11[0.10.11] - 2024-06-17

=== Added

* Add Arch Linux instructions ({pull-request-url}/509[#509])

== {compare-url}/v0.10.9\...v0.10.10[0.10.10] - 2024-04-25

=== Changed
